...

    Box(
        modifier = modifier
            .fillMaxSize()
            .clipToBounds()
            .onSizeChanged { widthPx = it.width }
            .testTag("main_tab_host")
    ) {
        if (fromTab == toTab) {
            stateHolder.SaveableStateProvider(toTab) {
                Box(Modifier.fillMaxSize()) {
                    content(toTab)
                }
...
